; ModuleID = '/home/carl/AnghaBench/freebsd/sys/kern/extr_kern_ubsan.c___ubsan_handle_alignment_assumption.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/kern/extr_kern_ubsan.c___ubsan_handle_alignment_assumption.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.CAlignmentAssumptionData = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @__ubsan_handle_alignment_assumption(%struct.CAlignmentAssumptionData* %0, i64 %1, i64 %2, i64 %3) #0 {
  %5 = alloca %struct.CAlignmentAssumptionData*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  %8 = alloca i64, align 8
  store %struct.CAlignmentAssumptionData* %0, %struct.CAlignmentAssumptionData** %5, align 8
  store i64 %1, i64* %6, align 8
  store i64 %2, i64* %7, align 8
  store i64 %3, i64* %8, align 8
  %9 = load %struct.CAlignmentAssumptionData*, %struct.CAlignmentAssumptionData** %5, align 8
  %10 = call i32 @ASSERT(%struct.CAlignmentAssumptionData* %9)
  %11 = load %struct.CAlignmentAssumptionData*, %struct.CAlignmentAssumptionData** %5, align 8
  %12 = load i64, i64* %6, align 8
  %13 = load i64, i64* %7, align 8
  %14 = load i64, i64* %8, align 8
  %15 = call i32 @HandleAlignmentAssumption(i32 0, %struct.CAlignmentAssumptionData* %11, i64 %12, i64 %13, i64 %14)
  ret void
}

declare dso_local i32 @ASSERT(%struct.CAlignmentAssumptionData*) #1

declare dso_local i32 @HandleAlignmentAssumption(i32, %struct.CAlignmentAssumptionData*, i64, i64, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
